--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -981,6 +981,8 @@
         name: ceph-defaults
     - import_role:
         name: ceph-facts
+        tasks_from: container_binary.yml
+      when: containerized_deployment | bool
     - import_role:
         name: ceph-handler
     - import_role:
@@ -991,10 +993,7 @@
       when:
         - (group_names != ['clients']) or (inventory_hostname == groups.get('clients', [''])|first)
         - containerized_deployment | bool
-    - import_role:
-        name: ceph-config
-    - import_role:
-        name: ceph-client
+
 
 - name: upgrade ceph-crash daemons
   hosts:
