--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -1056,6 +1056,7 @@
     - rbdmirrors
     - nfss
     - mgrs
+    - clients
   gather_facts: false # Already gathered previously
   become: true
   tasks:
