--- a/roles/ceph-infra/tasks/configure_firewall.yml
+++ b/roles/ceph-infra/tasks/configure_firewall.yml
@@ -92,15 +92,28 @@
         - mgr_group_name is defined
         - mgr_group_name in group_names
 
-    - name: open ceph networks on osd
+    - name: open ceph public network on osd
       firewalld:
         zone: "{{ ceph_osd_firewall_zone }}"
         source: "{{ item }}"
         permanent: true
         immediate: true
         state: enabled
-      with_items: "{{ public_network.split(',') | union(cluster_network.split(',')) }}"
+      with_items: "{{ public_network.split(',') }}"
       when:
+        - osd_group_name is defined
+        - osd_group_name in group_names
+
+    - name: open ceph cluster network on osd
+      firewalld:
+        zone: "{{ ceph_osd_firewall_zone }}"
+        source: "{{ item }}"
+        permanent: true
+        immediate: true
+        state: enabled
+      with_items: "{{ cluster_network.split(',') }}"
+      when:
+        - cluster_network is defined
         - osd_group_name is defined
         - osd_group_name in group_names
 
