--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -754,6 +754,7 @@
       - ceph-fuse
       - ceph-mds
       - ceph-mgr
+      - ceph-mgr-modules-core
       - ceph-mon
       - ceph-osd
       - ceph-release
@@ -768,6 +769,7 @@
       - librgw2
       - python3-ceph-argparse
       - python3-cephfs
+      - python3-ceph-common
       - python3-rados
       - python3-rbd
       - python3-rgw
