--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -31,6 +31,11 @@
       import_role:
         name: ceph-defaults
 
+    - name: block upgrade for RHCS deployments with RGW multisite
+      fail:
+        msg: "Red Hat Ceph Storage upgrade with RGW multisite deployed isn't allowed with this release."
+      when: rgw_multisite | bool
+
     - name: exit playbook, if user did not mean to upgrade cluster
       fail:
         msg: >
