--- a/infrastructure-playbooks/add-osd.yml
+++ b/infrastructure-playbooks/add-osd.yml
@@ -51,6 +51,16 @@
       set_fact:
         add_osd: True
 
+    - name: set_fact docker_exec_cmd
+      set_fact:
+        docker_exec_cmd: "docker exec ceph-mon-{{ hostvars[groups[mon_group_name][0]]['ansible_hostname'] }}"
+      delegate_to: "{{ groups[mon_group_name][0] }}"
+      delegate_facts: true
+      run_once: true
+      when:
+        - containerized_deployment
+        - groups.get(mon_group_name, []) | length > 0
+
   roles:
     - role: ceph-defaults
     - role: ceph-facts
