--- a/roles/ceph-facts/tasks/devices.yml
+++ b/roles/ceph-facts/tasks/devices.yml
@@ -87,5 +87,5 @@
     - item.value.sectors != "0"
     - item.value.partitions|count == 0
     - item.value.holders|count == 0
-    - ansible_facts['mounts'] | selectattr('device', 'match', '^'+device+'$') | length == 0
+    - ansible_facts['mounts'] | selectattr('device', 'match', '^'+device+'$') | list | length == 0
     - item.key is not match osd_auto_discovery_exclude
